bat.bool1.posneg.PosNeg.scala.error
Erreur de compilation :
PosNeg:3: error: not found: value ==
    case ((negative==false),(a<0 && b>0),(a>0 && b<0)) => return true
                   ^PosNeg:3: error: not found: value &&
    case ((negative==false),(a<0 && b>0),(a>0 && b<0)) => return true
                                 ^PosNeg:3: error: not found: value <
    case ((negative==false),(a<0 && b>0),(a>0 && b<0)) => return true
                              ^PosNeg:3: error: not found: value >
    case ((negative==false),(a<0 && b>0),(a>0 && b<0)) => return true
                                     ^PosNeg:3: error: not found: value &&
    case ((negative==false),(a<0 && b>0),(a>0 && b<0)) => return true
                                              ^PosNeg:3: error: not found: value >
    case ((negative==false),(a<0 && b>0),(a>0 && b<0)) => return true
                                           ^PosNeg:3: error: a is already defined as value a
    case ((negative==false),(a<0 && b>0),(a>0 && b<0)) => return true
                                          ^PosNeg:3: error: not found: value <
    case ((negative==false),(a<0 && b>0),(a>0 && b<0)) => return true
                                                  ^PosNeg:3: error: b is already defined as value b
    case ((negative==false),(a<0 && b>0),(a>0 && b<0)) => return true
                                                 ^PosNeg:4: error: not found: value &&
    case ((negative==false)&&((a<0 && b<0))) => return true
                           ^PosNeg:4: error: not found: value ==
    case ((negative==false)&&((a<0 && b<0))) => return true
                   ^PosNeg:4: error: not found: value &&
    case ((negative==false)&&((a<0 && b<0))) => return true
                                   ^PosNeg:4: error: not found: value <
    case ((negative==false)&&((a<0 && b<0))) => return true
                                ^PosNeg:4: error: not found: value <
    case ((negative==false)&&((a<0 && b<0))) => return true
                                       ^