bat.bool1.posneg.PosNeg.scala.code
def posNeg(a:Int, b:Int, negative:Boolean):Boolean = {
  (negative,a,b) match {
    case ((negative==false),(a<0 && b>0),(a>0 && b<0)) => return true
    case ((negative==false)&&((a<0 && b<0))) => return true
    case _ => return false
  }
}